refactor: mejorar logica en teams